# dd_parser_cleaner_migration

./: .gitignore  README.md
olist_migration/: README.md  config.yaml  copilot_init.md  customer_config.yaml  dataset-metadata.json  featurizer_config.yaml  modeling_config.yaml  pyproject.toml
olist_migration/agent_documents/: agent_init_modeling.md  agent_instructions_for_clustering.md  clustering_task_initialization.md  rationale_for_spectral_clustering.md
olist_migration/data/: SP_2017_freq_prod_weekly_sales_prepared.csv  SP_2017_orders_filtered.csv  SP_2017_orders_filtered_prepared.csv  SP_2017_weekly_revenue_prepared.csv  olist_2_year_customer_orders.csv  olist_2_year_prod_purchases.csv
olist_migration/data_dictionary/: customer_data_dictionary.csv  data_context.md  data_dictionary.csv
olist_migration/documents/: kmds-data-helper_filter_report.md  kmds_toolkit_usage_summary.md  markdown_kmds_helper_issue.md  migration_olist_usupervised_uc.md  modeling_results_observations.md  olist_development_example_full_doc.md  olist_featurization_pipeline.md  olist_temporal_affinity_analytics_for_SP.md  segmentation_as_usecase.md
olist_migration/featurization_scripts/: featurization.py
olist_migration/models/: __init__.py  cluster_counts.csv  clustering_advisor.py  clustering_task_template.py  joint_embedding.parquet  product_clusters.csv  product_embeddings.csv  run_spectral_clustering.py  spectral_clustering.py  spectral_clustering_summary.md  spectral_gap.csv  week_clusters.csv  week_embeddings.csv
olist_migration/notebooks/: clean_olist_dataset.ipynb  (+4 more)
(+35 files in other folders)
