[project]
name = "olist_migration"
version = "0.1.0"
description = "Migration of the Olist Example to a KMDS project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dd-parser-cleaner==0.4.9",
    "kmds-featurization>=0.2.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.0"]

[tool.uv]
package = false
