[project]
name = "olist_migration"
version = "0.1.0"
description = "Migration of the Olist Example to a KMDS project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dd-parser-cleaner==0.4.9",
    "kmds-featurization>=0.2.0",
    "kmds-modeling>=0.2.1",
    "kmds-data-helper>=0.5.0",
    "kmds-ui>=0.1.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.0"]

[tool.uv]
package = false
